@@ -97,6 +97,8 @@
   alias6: true
 
 
+# Filebeat modules
+
 # Suricata module
 
 - from: source_ecs.ip
@@ -130,6 +132,8 @@
 - from: source_ecs.geo.region_iso_code
   to: source.geo.region_iso_code
   alias: true
+
+## System module
 
 - from: system.syslog.hostname
   to: host.hostname
@@ -187,8 +191,6 @@
 - from: system.auth.ssh.geoip.*
   to: source.geo.*
   alias: true
-
-# Filebeat modules
 
 ## Apache module
 
@@ -254,7 +256,7 @@
   to: process.thread.id
   alias: true
 
-# IIS module
+## IIS module
 
 - from: iis.access.server_ip
   to: destination.ip
@@ -312,8 +314,6 @@
   to: source.geo.region_iso_code
   alias: true
 
-# Note: `http` is not officially in ECS yet
-
 - from: iis.access.method
   to: http.request.method
   alias: true
@@ -326,7 +326,8 @@
   to: http.request.referrer
   alias: true
 
-# HAProxy module
+## HAProxy module
+
 - from: haproxy.client.port
   to: source.port
   alias: true
@@ -375,6 +376,8 @@
   to: network.forwarded_ip
   alias: true
 
+## NGINX module
+
 - from: nginx.access.user_name
   to: user.name
   alias: true
@@ -386,8 +389,6 @@
 - from: nginx.access.agent
   to: user_agent.original
   alias: true
-
-# Note: `http` is not officially in ECS yet
 
 - from: nginx.access.response_code
   to: http.response.status_code
@@ -447,12 +448,39 @@
   to: message
   alias: true
 
-# From Auditbeat's auditd module.
+## Icinga module
+
+- from: icinga.debug.message
+  to: message
+  alias: true
+- from: icinga.debug.severity
+  to: log.level
+  alias: true
+
+- from: icinga.main.message
+  to: message
+  alias: true
+- from: icinga.main.severity
+  to: log.level
+  alias: true
+
+- from: icinga.startup.message
+  to: message
+  alias: true
+- from: icinga.startup.severity
+  to: log.level
+  alias: true
+
+# Auditbeat
+
+## From Auditbeat's auditd module.
 - from: source.hostname
   to: source.domain
   alias: true
 
-# Metricbeat base fields
+# Metricbeat
+
+## Metricbeat base fields
 - from: metricset.name
   to: event.dataset
   alias: false
@@ -477,4 +505,3 @@
   to: event.dataset
   alias: false
   comment: No alias mapping as field did not always exist
-
