@@ -4,32 +4,32 @@
         "event.dataset": "main", 
         "event.module": "icinga", 
         "icinga.main.facility": "Notification", 
-        "icinga.main.message": "Sending 'Recovery' notification 'demo!load!mail-icingaadmin for user 'on-call'", 
-        "icinga.main.severity": "information", 
         "input.type": "log", 
-        "log.offset": 0
+        "log.level": "information", 
+        "log.offset": 0, 
+        "message": "Sending 'Recovery' notification 'demo!load!mail-icingaadmin for user 'on-call'"
     }, 
     {
         "@timestamp": "2017-04-04T09:16:34.000Z", 
         "event.dataset": "main", 
         "event.module": "icinga", 
         "icinga.main.facility": "PluginNotificationTask", 
-        "icinga.main.message": "Notification command for object 'demo!load' (PID: 19401, arguments: '/etc/icinga2/scripts/mail-service-notification.sh') terminated with exit code 127, output: /etc/icinga2/scripts/mail-service-notification.sh: 20: /etc/icinga2/scripts/mail-service-notification.sh: mail: not found\n/usr/bin/printf: write error: Broken pipe\n", 
-        "icinga.main.severity": "warning", 
         "input.type": "log", 
         "log.flags": [
             "multiline"
         ], 
-        "log.offset": 133
+        "log.level": "warning", 
+        "log.offset": 133, 
+        "message": "Notification command for object 'demo!load' (PID: 19401, arguments: '/etc/icinga2/scripts/mail-service-notification.sh') terminated with exit code 127, output: /etc/icinga2/scripts/mail-service-notification.sh: 20: /etc/icinga2/scripts/mail-service-notification.sh: mail: not found\n/usr/bin/printf: write error: Broken pipe\n"
     }, 
     {
         "@timestamp": "2017-04-04T09:16:48.000Z", 
         "event.dataset": "main", 
         "event.module": "icinga", 
         "icinga.main.facility": "IdoMysqlConnection", 
-        "icinga.main.message": "Query queue items: 0, query rate: 5.38333/s (323/min 1610/5min 4778/15min);", 
-        "icinga.main.severity": "information", 
         "input.type": "log", 
-        "log.offset": 518
+        "log.level": "information", 
+        "log.offset": 518, 
+        "message": "Query queue items: 0, query rate: 5.38333/s (323/min 1610/5min 4778/15min);"
     }
 ]
