@@ -4,17 +4,12 @@
     "grok": {
       "field": "message",
       "patterns":[
-        "%{WORD:icinga.startup.severity}/%{WORD:icinga.startup.facility}: %{GREEDYMULTILINE:icinga.startup.message}"
+        "%{WORD:log.level}/%{WORD:icinga.startup.facility}: %{GREEDYMULTILINE:message}"
       ],
       "ignore_missing": true,
       "pattern_definitions": {
         "GREEDYMULTILINE": "(.|\n)*"
       }
-    }
-  },
-  {
-    "remove": {
-      "field": "message"
     }
   }],
   "on_failure" : [{
